--- a/src/main/resources/templates/blocks/headerTable.html
+++ b/src/main/resources/templates/blocks/headerTable.html
@@ -1,4 +1,7 @@
 <div th:fragment="headerTable" xmlns:th="http://www.w3.org/1999/xhtml">
+    <div th:insert="blocks/FilterRow :: FilterRow">
+
+    </div>
         <tr>
             <th scope="col">#</th>
             <th scope="col">Время обработки</th>
