--- a/src/main/resources/templates/IncomingRequest.html
+++ b/src/main/resources/templates/IncomingRequest.html
@@ -35,6 +35,11 @@
 </header>
 
 <header th:insert="blocks/Table :: Table"></header>
+
+<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+
 </body>
 </html>
 
