--- a/src/main/resources/templates/blocks/headerTable.html
+++ b/src/main/resources/templates/blocks/headerTable.html
@@ -4,6 +4,7 @@
     </div>
         <tr>
             <th scope="col">#</th>
+            <th scope="col">Действия</th>
             <th scope="col">Время обработки</th>
             <th scope="col">Статус</th>
             <th scope="col">Наименование программы</th>
