--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -5,6 +5,7 @@
     <title>Главная страница</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} "/>
 </head>
 
 <body>
@@ -24,11 +25,11 @@
                 <button type="button" class="btn btn-outline-light me-2">Login</button>
                 <button type="button" class="btn btn-warning">Sign-up</button>
             </div>
+
         </div>
     </div>
 </header>
+
 <p th:text="${namePage}"/>
-
-
 </body>
 </html>
