Добавление Насти в скрытую копию

--- a/src/main/resources/templates/IncomingRequest.html
+++ b/src/main/resources/templates/IncomingRequest.html
@@ -24,6 +24,12 @@
                 <form action="/IncomingRequest/stop" method="post">
                     <button type="submit" class="btn btn-outline-light me-2 mt-1 mb-1">Остановить</button>
                 </form>
+                <form action="/IncomingRequest/startSMS" method="post">
+                    <button type="submit" class="btn btn-outline-light me-2 mt-1 mb-1">Запуск СМС</button>
+                </form>
+                <form action="/IncomingRequest/stopSMS" method="post">
+                    <button type="submit" class="btn btn-outline-light me-2 mt-1 mb-1">Остановить СМС</button>
+                </form>
             </div>
         </div>
     </div>
